@@ -12,13 +12,14 @@ export(coxsimtvc)
 export(ggfitStrata)
 export(simGG)
 export(tvc)
-import(car)
 import(data.table)
 import(ggplot2)
-import(gridExtra)
-import(plyr)
 import(quadprog)
-import(reshape2)
-import(stringr)
-import(survival)
 importFrom(MSBVAR,rmultnorm)
+importFrom(car,scatter3d)
+importFrom(gridExtra,grid.arrange)
+importFrom(plyr,ddply)
+importFrom(stringr,str_match)
+importFrom(stringr,str_replace)
+importFrom(stringr,word)
+importFrom(survival,basehaz)
