@@ -41,7 +41,8 @@
 #' @method simGG simpoly
 #' @S3method simGG simpoly
 
-simGG.simpoly <- function(obj, xlab = NULL, ylab = "Relative Hazard\n", title = NULL, smoother = "auto", lcolour = "#2B8CBE", pcolour = "#A6CEE3",lsize = 2, psize = 1, palpha = 0.1, ...){
+simGG.simpoly <- function(obj, xlab = NULL, ylab = "Relative Hazard\n", title = NULL, smoother = "auto", lcolour = "#2B8CBE", pcolour = "#A6CEE3",lsize = 2, psize = 1, palpha = 0.1, ...)
+{
   if (!inherits(obj, "simpoly")){
   	stop("must be a simpoly object")
   }
