@@ -171,8 +171,7 @@ Sim3 <- coxsimtvc(obj = M1, b = "backlog", btvc = "Lbacklog",
   Arvix. http://arxiv.org/pdf/1302.2142v1.pdf.
 }
 \seealso{
-  \code{\link{simGG}}, \code{\link{rmultinorm}},
-  \code{\link{survival}}, \code{\link{strata}}, and
-  \code{\link{coxph}}
+  \code{\link{simGG}}, \code{\link{survival}},
+  \code{\link{strata}}, and \code{\link{coxph}}
 }
 
