@@ -16,7 +16,8 @@
 }
 \seealso{
   \code{\link{simGG.siminteract}},
-  \code{\link{simGG.simtv}}, \code{\link{simGG.simlinear}},
+  \code{\link{simGG.simtvc}},
+  \code{\link{simGG.simlinear}},
   \code{\link{simGG.simpoly}},
   \code{\link{simGG.simspline}}
 }
