@@ -2,22 +2,14 @@
 \alias{simGG.simtvc}
 \title{Plot simulated time-varying hazard ratios or stratified time-varying hazard rates from a simtvc class object using ggplot2}
 \usage{
-  \method{simGG}{simtvc} (obj, qi = "Relative Hazard",
-    from = NULL, to = NULL, xlab = NULL, ylab = NULL,
-    title = NULL, smoother = "auto", spalette = "Set1",
-    leg.name = "", lcolour = "#2B8CBE", lsize = 2,
-    pcolour = "#A6CEE3", psize = 1, palpha = 0.1, ...)
+  \method{simGG}{simtvc} (obj, from = NULL, to = NULL,
+    xlab = NULL, ylab = NULL, title = NULL,
+    smoother = "auto", spalette = "Set1", leg.name = "",
+    lcolour = "#2B8CBE", lsize = 2, pcolour = "#A6CEE3",
+    psize = 1, palpha = 0.1, ...)
 }
 \arguments{
   \item{obj}{a simtvc class object}
-
-  \item{qi}{character string indicating what quantity of
-  interest you would like to calculate. Can be
-  \code{'Relative Hazard'}, \code{'First Difference'},
-  \code{'Hazard Ratio'}, or \code{'Hazard Rate'}.he default
-  is \code{qi = "Relative Hazard"}. If \code{qi = 'Hazard
-  Rate'} and the \code{coxph} model has strata, then hazard
-  rates for each strata will also be calculated.}
 
   \item{from}{numeric time to start the plot from.}
 
@@ -129,9 +121,9 @@ Sim3 <- coxsimtvc(obj = M1, b = "backlog", btvc = "Lbacklog",
                   by = 15, ci = 0.99)
 
 # Create plots
-simGG(Sim1, qi = "Relative Hazard")
-simGG(Sim2, qi = "First Difference")
-simGG(Sim3, qi = "Hazard Ratio", leg.name = "Comparision", from = 1200)
+simGG(Sim1)
+simGG(Sim2)
+simGG(Sim3, leg.name = "Comparision", from = 1200)
 }
 \references{
   Licht, Amanda A. 2011. ''Change Comes with Time:
